adjusted bottom padding of sections on mobile devices, ensured h2 can fit as well

--- a/components/intro.css
+++ b/components/intro.css
@@ -4,6 +4,7 @@
 
 #intro-h2 {
   margin-top: 0;
+  overflow-wrap: break-word;
 }
 
 #intro p {
