--- a/components/layouts.css
+++ b/components/layouts.css
@@ -1,3 +1,9 @@
 .layout-section {
   padding-bottom: 200px;
 }
+
+@media (max-width: 37.5rem) {
+  .layout-section {
+    padding-bottom: 100px;
+  }
+}
